# lance-graph

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AGENT_ORCHESTRATION_LOG.md  CHANGELOG.md  CLAUDE.md  CRATE_SEPARATION_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.avx512  Dockerfile.hhtld  Dockerfile.md  FormatBestPractices.md  PROGRESS.md  README.md  SESSION_COGNITIVE_SHADER.md  SESSION_JINA_V5_ONNX_CALIBRATION.md  SESSION_JINA_V5_PAPER_ANALYSIS.md  SESSION_VISION_SENSOR_VIT.md  SPARE_PARTS_SUMMARY.md  VAQC_EPIPHANY.md  blackboard.md  rust-toolchain.toml
crates/ada-3dtiles/: Cargo.toml
crates/ada-3dtiles/src/: error.rs  lib.rs  tileset.rs
crates/bge-m3/: Cargo.toml  rust-toolchain.toml
crates/bge-m3/src/: embed.rs  lib.rs  tokenizer.rs  weights.rs
crates/bgz-tensor/: BGZ_HHTL_D.md  Cargo.toml  SAVANT_INTEGRATION.md
crates/bgz-tensor/data/: .gitignore  manifest.json
crates/bgz-tensor/examples/: bf16_loss.rs  bgz7_hydration_quality.rs  budget_rotation_test.rs  calibrate_from_jina.rs  cam_pq_row_count_probe.rs  compare_stacked_vs_i16.rs  fold_jina_embeddings.rs  fractal_probe.rs  full_pipeline.rs  gamma_phi_gguf.rs  gguf_euler_fold.rs  gguf_families.rs  gguf_thinking_styles.rs  golden_offset_test.rs  nnue_palette_cosine.rs  variance_audit.rs
crates/bgz-tensor/src/: adaptive_codec.rs  attention.rs  belichtungsmesser.rs  cascade.rs  codebook4096.rs  codebook_calibrated.rs  euler_fold.rs  fisher_z.rs  fractal_descriptor.rs  gamma_calibration.rs  gamma_phi.rs  had_cascade.rs  hdr_belichtung.rs  hhtl_cache.rs  hhtl_d.rs  hhtl_f32.rs  holographic_residual.rs  hydrate.rs  jina.rs  lib.rs  manifest.rs  matryoshka.rs  ndarray_compat.rs  neuron_hetero.rs  palette.rs  projection.rs  quality.rs  savant.rs  shared_palette.rs  similarity.rs  slot_l.rs  stacked.rs  stacked_n.rs  turboquant_kv.rs  variance.rs  xor_adaptive.rs  zipper.rs
crates/bgz17/: Cargo.toml  KNOWLEDGE.md
crates/bgz17/examples/: probe_base17_cv_sweep.rs  probe_codebook_44.rs  probe_codebook_44_realdata.rs  probe_foveated_descent.rs
crates/bgz17/src/: base17.rs  bridge.rs  clam_bridge.rs  container.rs  distance_matrix.rs  generative.rs  layered.rs  lib.rs  palette.rs  palette_csr.rs  palette_matrix.rs  palette_semiring.rs  prefetch.rs  rabitq_compat.rs  router.rs  scalar_sparse.rs  scope.rs  simd.rs  similarity.rs  tripartite.rs  typed_palette_graph.rs
crates/causal-edge/: Cargo.toml
crates/causal-edge/src/: edge.rs  edge_v3.rs  layout.rs  lib.rs  network.rs  pearl.rs  plasticity.rs  syllogism.rs  tables.rs  v2_layout_tests.rs
crates/cognitive-compiler/: Cargo.toml
crates/cognitive-compiler/src/: lib.rs
crates/cognitive-shader-actor/: Cargo.toml  README.md
crates/cognitive-shader-actor/src/: actor.rs  lib.rs  messages.rs  supervisor.rs
crates/cognitive-shader-driver/: Cargo.toml  REFACTOR_NOTES.md  THINKING_RECONCILIATION.md  build.rs
crates/cognitive-shader-driver/examples/: README.md  villager_ai.rs
crates/cognitive-shader-driver/proto/: shader.proto
crates/cognitive-shader-driver/src/: attention_mask.rs  attention_mask_actor.rs  auto_detect.rs  auto_style.rs  backing.rs  bindspace.rs  codec_bridge.rs  codec_kernel_cache.rs  codec_research.rs  cypher_bridge.rs  decode_kernel.rs  driver.rs  edge_v3_compare.rs  engine_bridge.rs  grpc.rs  l4_morton_compare.rs  lib.rs  mailbox_soa.rs  planner_bridge.rs  rotation_kernel.rs  rubicon.rs  serve.rs  sigma_rosetta.rs  spo_bridge.rs  token_agreement.rs  wire.rs
crates/cognitive-shader-driver/tests/: busdto_bridge_test.rs  end_to_end.rs  firewall.rs  rubicon_vertical_probe.rs  substrate_sanity.rs  w2_differential.rs
crates/cognitive-stack/: Cargo.toml  Dockerfile  INTEGRATION.md  README.md
crates/cognitive-stack/src/: main.rs
crates/deepnsm/: Cargo.toml
crates/deepnsm-v2/: Cargo.toml
crates/deepnsm-v2/data/: .gitignore  README.md  bible_vocab.txt
crates/deepnsm-v2/examples/: bible_wave.rs  genre_shapes.rs
crates/deepnsm-v2/probes/: README.md  crosscheck_full.py  embed_bible_vocab.py  fidelity_48_vs_96.py  spo_usedfor_nars.py  train_codebook.py
crates/deepnsm-v2/src/: ancestry.rs  basin.rs  belief.rs  codebook.rs  evidence.rs  fsm.rs  introspect.rs  lib.rs  reason.rs  shape.rs  space.rs  spo.rs  vocab.rs  wave.rs
crates/deepnsm/examples/: causal_edge_v3_facet.rs  freq_is_cosine.rs  gridlake_coca_wire.rs  gridlake_spo_covariance.rs  gridlake_spo_ngrams.rs  homograph_collapse.rs  probe_dcsw1_standing_wave.rs  probe_isotropy_correction.rs  probe_semantic_sanity.rs  spo_anaphora_nibble.rs  spo_markov_kg.rs  substrate_projection_compare.rs  tri_fidelity_edges.rs  tri_fidelity_soa.rs
crates/deepnsm/src/: arcs.rs  arcuate.rs  cam64.rs  codebook.rs  comprehension.rs  content_fp.rs  context.rs  crystal_neighborhood.rs  disambiguator_glue.rs  encoder.rs  episodic_spo.rs  fingerprint16k.rs  lib.rs  markov_bundle.rs  markov_soa.rs  morphology.rs  nsm_primes.rs  parser.rs  pipeline.rs  pos.rs  quantum_mode.rs  reader_state.rs  sentence_transformer64.rs  signed_crystal.rs  similarity.rs  spo.rs  ticket_emit.rs  trajectory.rs  trajectory_audit.rs  triangle_bridge.rs  vocabulary.rs  window.rs
crates/deepnsm/tests/: animal_farm_harness.rs  integration_role_alignment.rs
crates/elixir-template/: Cargo.toml
crates/four-repo-demo/: Cargo.toml  README.md
crates/helix/: Cargo.toml  KNOWLEDGE.md
crates/highheelbgz/: Cargo.toml
crates/holograph/: ARCHITECTURAL_INSIGHTS.md  Cargo.toml
crates/jc/: Cargo.toml
crates/lance-graph-archetype/: Cargo.toml
crates/lance-graph-arm-discovery/: Cargo.toml  README.md
crates/lance-graph-callcenter/: .gitkeep  Cargo.toml  build.rs
crates/lance-graph-codec-research/: Cargo.toml  KNOWLEDGE.md  README.md
crates/lance-graph-cognitive/: Cargo.toml
crates/lance-graph-consumer-conformance/: Cargo.toml
crates/lance-graph-contract/: Cargo.toml  build.rs
crates/lance-graph-ogar/: .gitignore  Cargo.toml
crates/lance-graph-ontology/: Cargo.toml
crates/lance-graph-osint/: Cargo.toml
crates/lance-graph-planner/: AUTOCOMPLETE_CACHE_PLAN.md  Cargo.toml
crates/lance-graph-python/: Cargo.toml
(+2619 files in other folders)
