[workspace]
members = [
    "crates/lance-graph",
    "crates/lance-graph-catalog",
    "crates/lance-graph-benches",
    "crates/lance-graph-planner",
    "crates/lance-graph-contract",
    "crates/neural-debug",
    "crates/lance-graph-callcenter",
    "crates/lance-graph-archetype",
    "crates/lance-graph-rbac",
    "crates/lance-graph-ontology",
    "crates/bgz-tensor",
    "tools/dto-class-check",
    "crates/lance-graph-consumer-conformance",
    # PR-G2 (TD-RACTOR-SUPERVISOR-5): ractor-supervised callcenter actor tree
    "crates/lance-graph-supervisor",
    "crates/sigma-tier-router",
    # TD-SHADER-DRIVER-WORKSPACE-CONFLICT-1: moved from exclude to members
    "crates/cognitive-shader-driver",
    # 01-deps-substrate: embedded SurrealDB-on-Lance cognitive store
    "crates/surreal_container",
]
exclude = [
    # Python bindings (upstream-inherited, opt-in via --manifest-path)
    "crates/lance-graph-python",
    "crates/lance-graph-codec-research",
    "crates/bgz17",
    "crates/deepnsm",
    "crates/lance-graph-osint",
    "crates/reader-lm",
    "crates/bge-m3",
    "crates/p64-bridge",
    "crates/causal-edge",
    "crates/highheelbgz",
    "crates/thinking-engine",
    "crates/holograph",
    "crates/lance-graph-cognitive",
    "crates/learning",
    "crates/jc",
    "crates/sigker",
]
resolver = "2"

# ─── Workspace-level dependency pins ────────────────────────────────────────
#
# Task 01 (deps_substrate) — Lance 6 / LanceDB 0.29 / surrealdb kv-lance
#
# RESOLVED(A) 2026-05-28 — Lance pinned to `=6.0.0` across all crate Cargo.tomls
#   (lance-graph, lance-graph-benches, lance-graph-callcenter, lance-graph-catalog,
#   lance-graph-ontology, holograph, surreal_container; lance-arrow + lance-index
#   + lance-linalg + lance-namespace bump in lock-step). #423's coordinated
#   4 → 6 jump landed at 6.0.0.
#
#   The user authorised a follow-on patch 6.0.0 → 6.0.1, but it is **CURRENTLY
#   BLOCKED by lancedb 0.29.0's transitive `lance = "=6.0.0"` requirement**:
#   lancedb 0.29.0 is the latest 0.29.x published on crates.io and pins lance
#   to exact-equals 6.0.0. Cargo cannot satisfy both `lance = "=6.0.1"` (our
#   pin) and lancedb's transitive `lance = "=6.0.0"`. Resolution path: wait
#   for lancedb 0.29.1+ that bumps the lance pin, OR drop the strict-equals
#   pin in lance-graph (doctrine change). Tracked as TD-LANCE-6.0.1-PIN.
#
# RESOLVED(B) 2026-05-28 — LanceDB pinned to `=0.29.0` (the latest 0.29 patch);
#   transitively pins lance =6.x, datafusion 53, arrow 58.
#
# RESOLVED(D) 2026-05-28 — lance-index → ndarray transitive is satisfied by the
#   workspace's `[patch.crates-io] ndarray = { path = "../ndarray" }` override
#   (the AdaWorldAPI fork), confirmed working by `cargo check --workspace` post
#   #423's 4 → 6 bump.
#
# STILL OPEN — BLOCKED(C): `surrealdb` with `kv-lance` feature.
#   Upstream surrealdb (crates.io) does NOT ship a `kv-lance` feature.  This
#   feature lives in the AdaWorldAPI fork (core/src/kvs/lance/ per
#   cognitive-substrate.md).  A fork-access human must supply:
#     - the git URL of the fork (e.g. https://github.com/AdaWorldAPI/surrealdb)
#     - the branch or tag to pin (e.g. `branch = "kv-lance-v2"`)
#     - the exact feature flag name (confirmed: `kv-lance` from spec)
#     - whether a published crate path or `[patch.crates-io]` override is
#       required for workspace compilation.
#   Until resolved, surreal_container's `surrealdb` dep stays commented out.
#
# Crate-level pins (canonical source of truth — workspace.dependencies is not
# used; each consumer crate declares its own pin with exact-equals so the
# whole graph resolves to the same semver):
#   lance           = "=6.0.0"   (lance-arrow / lance-index / lance-linalg /
#                                 lance-namespace bump in lock-step)
#   lancedb         = "=0.29.0"
#   datafusion      = "53"       (+ datafusion-common / -expr / -sql /
#                                 -functions-aggregate)
#   arrow-array     = "58"       (+ arrow-schema / -buffer / -ipc / arrow)
