[package]
name = "ada-3dtiles"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "3D Tiles 1.0/1.1 tileset reader: explicit + implicit tiling DTOs with lossless extension passthrough"

# Standalone crate (workspace `exclude`). Depends only on serde/serde_json so it
# can be parsed and tested without the full lance-graph / DataFusion tree.
# Traversal policy, Lance sidecar storage, and ndarray kernels are wired in
# separately per `.claude/plans/3DGS-integration-wiring-plan.md`.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
