[package]
name = "cognitive-shader-actor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Glue #4 — wraps cognitive shaders as supervisable ractor::Actor instances (plan §6)"
# Sprint 2 wiring: see integration-plan.md §6 and §7 Sprint 2.


[dependencies]
# Contract crate: SupervisableShader trait, RestartBackoff, SupervisionPolicy (plan §6 + §1 Contracts)
lance-graph-contract = { version = "0.2", path = "../lance-graph-contract" }

# Actor framework: ractor::Actor, ActorRef, RpcReplyPort, ActorProcessingErr (plan §6 API sketch)
ractor = "*"

# Async runtime required by ractor's tokio backend (plan §6 + sprint 2)
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }

# Ergonomic error handling throughout the actor / supervisor surface (plan §6)
anyhow = "*"

# Columnar payload type used in the plan §6 API sketch (RecordBatch)
arrow-array = "*"
